tests/transpiler/x/fs/list_set_ops.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(13,8): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(14,8): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(15,8): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/transpiler/x/fs/list_set_ops.fs(16,20): error FS0003: This value is not a function and cannot be applied
